--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-pandas
-matplotlib
-seaborn
-streamlit
-sklearn
+seaborn==0.11.2
+matplotlib==3.5.0
+scikit-learn==0.23.2
+plotly==5.1.0
+fpdf==1.7.2
+openpyxl==3.0.9
